<resources>
    <string name="app_name">LoLAid</string>
    <string name="stats_button" translatable="false">Button to show Stats Tab</string>
    <string name="history_button" translatable="false">Button to show History Tab</string>
    <string name="recommendations_button" translatable="false">Button to show Recommendations Tab</string>
    <string name="live_game_button" translatable="false">Button to show Live Game Tab</string>
    <string name="background_image" translatable="false">Background of the Tabs</string>
    <string name="settings_button" translatable="false">Button to access to settings menu</string>
    <string name="close_button" translatable="false">Button to close the settings menu</string>
    <string name="welcome_text">Welcome to LoLAid</string>
    <string name="stats_title">Stats</string>
    <string name="history_title">History</string>
    <string name="recommendations_title">Tips</string>
    <string name="live_game_title">Live Game</string>
    <string name="settings_title">Settings</string>
    <string name="settings_language_title">Language:</string>
    <string name="settings_region_title">Region:</string>
    <string name="summoner_name_title">Summoner name:</string>
    <string name="language_english">English</string>
    <string name="language_spanish">Spanish</string>
    <string name="language_valencian">Valencian</string>
    <string name="summoner_name_description" translatable="false">This is the Summoner name description</string>
    <string name="summoner_name_hint" translatable="false"></string>
    <string name="settings_option" translatable="false"></string>
    <string name="region_euw" translatable="false">EUW</string>
    <string name="region_na" translatable="false">NA</string>
    <string name="region_kr" translatable="false">KR</string>
    <string name="region_chi" translatable="false">CHI</string>
    <string name="start_button">Start</string>
    <string name="login_failed">The summoner name is not correct! Please check it.</string>
    <string name="summoner_level_title">Level:</string>
    <string name="summoner_rank_title">Rank:</string>
    <string name="summoner_winrate_title">WinRate:</string>
    <string name="main_champions_title">Main champions:</string>
    <string name="summoner_spells_title">Summoner spells:</string>
    <string name="game_time_title">Game time:</string>
    <string name="team_title">Team:</string>
    <string name="blue_team">Blue</string>
    <string name="red_team">Red</string>
    <string name="runes_title">Runes:</string>
    <string name="victory_text">Victory</string>
    <string name="defeat_text">Defeat</string>
    <string name="error_text">Data could not be loaded. Please try again later.</string>
    <string name="player_not_live">This player is not in a game right now. Please try again later.</string>

    <string name="rec1_iron"> Your current rank is iron. Try to pay attention to farm and dont tilt.</string>
    <string name="rec1_bronze"> Your current rank is bronze. Look at the minimap more often and ward when possible.</string>
    <string name="rec1_silver"> Your current rank is silver. Follow your team calls and stay positive.</string>
    <string name="rec1_gold"> Your current rank is gold. Play a max. of 3 champs and 1 position and be consistent.</string>
    <string name="rec1_platinum"> Your rank is platinum. Dont focus too much on getting kills. Improve map awareness.</string>
    <string name="rec1_diamond"> Your rank is diamond. Nice! Focus on improving from your mistakes and stay calm.</string>
    <string name="rec1_master"> Your current rank is master+. You are at the top already. Keep working hard.</string>

    <string name="rec2_negative"> You have less than 49% winrate. Stop playing after losing and keep a cool head.</string>
    <string name="rec2_positive">" You have more than 51% winrate. Keep playing a concrete position and champions."</string>
    <string name="rec2_neutral"> You have a neutral winrate. Not bad! Try to dodge games already lost in champ select.</string>

    <string name="rec3_no_champs">You dont have any champion with +100k points. Try to master at least one.</string>
    <string name="rec3_one_champs">You have one champion with +100k points. Play more champions of that  position.</string>
    <string name="rec3_two_champs">You have two champions with +100k points. Learn another position to cover your team.</string>
    <string name="rec3_three_champs">"You have three champions with +100k points. Play them in ranked games!</string>
</resources>