<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginActivityId">

    <ImageView
        android:id="@+id/loginBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_image"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/background_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginBackground"
        app:srcCompat="@drawable/logo" />


    <TextView
        android:id="@+id/loginRegionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:text="@string/settings_region_title"
        android:textAlignment="textStart"
        android:textColor="#cec92f"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginSummonerNameBox"
        tools:text="History Tab:" />

    <TextView
        android:id="@+id/loginSummonerNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/summoner_name_title"
        android:textAlignment="textStart"
        android:textColor="#cec92f"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginLogo"
        tools:text="Summoner name:" />

    <EditText
        android:id="@+id/loginSummonerNameBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="#cec92f"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginSummonerNameTitle" />

    <Spinner
        android:id="@+id/loginRegionSpinner"
        style="@style/spinner_style"
        android:layout_width="180dp"
        android:layout_height="38dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:entries="@array/regions_list_name"
        app:layout_constraintStart_toEndOf="@+id/loginRegionTitle"
        app:layout_constraintTop_toBottomOf="@+id/loginSummonerNameBox" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="236dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:text="@string/start_button"
        android:background = "@drawable/roundedbutton"
        android:textSize="30sp"
        android:textColor="@color/primary_blue"
        android:onClick="startButtonHandler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginRegionTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>