<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settingsActivityId">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_image"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/settingsLanguageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/settings_language_title"
        android:textAlignment="textStart"
        android:textColor="#cec92f"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background"
        tools:text="History Tab:" />

    <TextView
        android:id="@+id/summonerNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/summoner_name_title"
        android:textAlignment="textStart"
        android:textColor="#cec92f"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsLanguageTitle"
        tools:text="Summoner name:" />

    <EditText
        android:id="@+id/summonerNameBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="#cec92f"
        android:layout_marginTop="5dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/summonerNameTitle" />

    <Spinner
        android:id="@+id/settingsLanguageSpinner"
        style="@style/spinner_style"
        android:layout_marginStart="30dp"
        android:entries="@array/languages_list_name"
        app:layout_constraintStart_toEndOf="@+id/settingsLanguageTitle"
        app:layout_constraintTop_toTopOf="@+id/background" />


</androidx.constraintlayout.widget.ConstraintLayout>